mongo db connection configurations

--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 
+spring.data.mongodb.uri=mongodb+srv://admin:pass%40word1@cluster0.9m6kc.mongodb.net/EStockMarketDB?retryWrites=true&w=majority
+#mongodb+srv://cluster0.9m6kc.mongodb.net/testMongoDB1?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority
+#mongodb+srv://cluster0.9m6kc.mongodb.net/myFirstDatabase?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority
+spring.data.mongodb.database=EStockMarketDB
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/stock_market_db
 spring.datasource.username=root
