Added mongo db dependency

--- a/company/pom.xml
+++ b/company/pom.xml
@@ -50,11 +50,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
 		<dependency>
@@ -85,7 +85,18 @@
 			<artifactId>axon-spring-boot-starter</artifactId>
 			<version>4.5.9</version>
 		</dependency>
+
+		<!-- Mongo DB Atlas -->
+		<!-- <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+		</dependency> -->
 		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
 	</dependencies>
 
 	<build>
