--- a/company/src/main/resources/application.properties
+++ b/company/src/main/resources/application.properties
@@ -2,6 +2,11 @@
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=testMongo
 
+spring.data.mongodb.uri=mongodb+srv://admin:pass%40word1@cluster0.9m6kc.mongodb.net/EStockMarketDB?retryWrites=true&w=majority
+#mongodb+srv://cluster0.9m6kc.mongodb.net/testMongoDB1?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority
+#mongodb+srv://cluster0.9m6kc.mongodb.net/myFirstDatabase?authSource=%24external&authMechanism=MONGODB-X509&retryWrites=true&w=majority
+spring.data.mongodb.database=EStockMarketDB
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/stock_market_db
 spring.datasource.username=root
@@ -18,6 +23,7 @@ spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.St
 spring.kafka.consumer.value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
       
-      
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
       
       
